# stonecut

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  DESIGN.md  LICENSE  NOTICE.md  README.md  eslint.config.js  package.json  pyproject.toml  ralph-afk  ralph-lib  ralph-once  tsconfig.json
.claude/: settings.json
.claude/hooks/: block-uv.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: cli.ts  config.ts  frontmatter.ts  git.ts  github.ts  init.ts  local.ts  logger.ts  naming.ts  prompt.ts  runner.ts  skills.ts  types.ts
src/forge/: cli.py  git.py  github.py  local.py  naming.py  prompt.py  runner.py
src/forge/runners/: __init__.py  claude.py  codex.py
src/forge/skills/forge:interview/: SKILL.md
src/forge/skills/forge:issues/: SKILL.md
src/forge/skills/forge:prd/: SKILL.md
src/forge/templates/: execute.md
src/runners/: claude.ts  codex.ts  index.ts
src/skills/forge-interview/: SKILL.md
src/skills/forge-issues/: SKILL.md
src/skills/forge-prd/: SKILL.md
src/skills/stonecut-interview/: SKILL.md
src/skills/stonecut-issues/: SKILL.md
src/skills/stonecut-prd/: SKILL.md
src/templates/: execute.md
tests/: cli.test.ts  commit-flow.test.ts  config.test.ts  frontmatter.test.ts  git.test.ts  github.test.ts  init.test.ts  local.test.ts  logger.test.ts  naming.test.ts  prompt.test.ts  runners.test.ts  scaffold.test.ts  skills.test.ts  test_cli.py  test_commit_flow.py  test_git.py  test_github.py  test_local.py  test_runners.py  test_skills.py
