[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prd-forge"
version = "0.3.0"
description = "CLI tool that executes PRD-driven development workflows using Claude Code"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "questionary>=2.0.0",
]

[project.scripts]
forge = "forge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forge = ["templates/*.md", "skills/*/SKILL.md"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.8.0"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
